[project]
name = "sentiment-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "nltk>=3.9.2",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "python-lsp-server[all]>=1.13.1",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
    "transformers>=4.57.1",
]
